yay CSS fix for blurriness

--- a/src/styling/gallery.css
+++ b/src/styling/gallery.css
@@ -4,18 +4,34 @@
 }
 
 .galleryContainer {
+    width: 100%;
+    height: 100%;
+
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    background-color: lightgrey;
 }
 
 .galleryContainer h1 {
     width: 100%;
     text-align: center;
+    height: fit-content;
 }
 
-.galleryImage {
+img {
+    width: 100%;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-crisp-edges;
+    image-rendering: pixelated;
+}
+
+/* #galleryImage {
     max-width: 30%;
     max-height: 20vh;
-}
+} */
